fix overlapping img

--- a/stream_twitter/static/css/stream_twitter.css
+++ b/stream_twitter/static/css/stream_twitter.css
@@ -90,7 +90,7 @@ img.tweet-profile {
 }
 
 img.profile-picture {
-    min-width: 100px;
+    min-width: 80px;
 }
 
 h1.welcome-title {
